--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,7 +82,7 @@ button {
     font-size: 20px;
     text-align: center;
     padding: 5px;
-    background-color: #00FFA5;
+    background-color: #0097FF;
     font-weight: bold;
 
 }
